--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -76,7 +77,7 @@
 <body>
     <header>
         <div id="inicjaly">
-            <p id="inicjaly-p">MM</p>
+            <p id="inicjaly-p">NP</p>
         </div>
         <div id="dzwonek">
             <img src="dowod_files/dzwonek_dot.svg" alt="kropka" id="kropka">
