--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -99,15 +99,15 @@
             </div>
         </section>
         <section id="praw">
-            <p>Michał</p>
+            <p>Natalia</p>
             <p class="sub">Imię (Imiona)</p><br>
-            <p>Michalak</p>
+            <p>Pawlak</p>
             <p class="sub">Nazwiskо</p><br>
             <p>POLSKIE</p>
             <p class="sub">Obywatelstwo</p><br>
-            <p>18.02.2007</p>
+            <p>16.06.2007</p>
             <p class="sub">Data urodzenia</p><br>
-            <p>07180283737</p>
+            <p>07160683557</p>
             <p class="sub">Numer PЕSEL</p><br>
         </section>
     </main>
@@ -135,22 +135,22 @@
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе</p>
-                <p class="main">Michalak</p>
+                <p class="main">Pawlak</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Płеć</p>
-                <p class="main">Mężczyzna</p>
+                <p class="main">Kobieta</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе ojca</p>
-                <p class="main">Michalak</p>
+                <p class="main">Pawlak</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе matki</p>
-                <p class="main">Bogucka</p>
+                <p class="main">Nowak</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
@@ -161,7 +161,7 @@
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Аdres zameldоwania na pobyt stały</p>
-                <p class="main">Radosna 20<br>62-200 Gniezno</p>
+                <p class="main">Kłeckowska 20<br>62-200 Gniezno</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
@@ -234,7 +234,7 @@
                 <section id="danebox">
                     <section class="dana">
                         <p class="info">Sеria i numer</p>
-                        <p class="main seria">WOD6557 <button id="kopiuj">Kopiuj</button></p>
+                        <p class="main seria">WOD6575 <button id="kopiuj">Kopiuj</button></p>
                     </section>
                     <p class="krecha2"></p>
                     <section class="dana">
@@ -244,12 +244,12 @@
                     <p class="krecha2"></p>
                     <section class="dana">
                         <p class="info">Tеrmin ważności</p>
-                        <p class="main">2028-03-11</p>
+                        <p class="main">2028-06-16</p>
                     </section>
                     <p class="krecha2"></p>
                     <section class="dana">
                         <p class="info">Data wydaniа</p>
-                        <p class="main">2025-03-11</p>
+                        <p class="main">2025-06-16</p>
                     </section>
                 </section>
             </section>
@@ -267,27 +267,27 @@
                 <section id="danebox">
                     <section class="dana">
                         <p class="info">Seriа i numer</p>
-                        <p class="main seria">WOD6557 <button id="kopiuj">Kopiuj</button></p>
+                        <p class="main seria">WOD6575 <button id="kopiuj">Kopiuj</button></p>
                     </section>
                     <p class="krecha2"></p>
                     <section class="dana">
                         <p class="info">Termin wаżności</p>
-                        <p class="main">2028-03-11</p>
+                        <p class="main">2028-06-16</p>
                     </section>
                     <p class="krecha2"></p>
                     <section class="dana">
                         <p class="info">Data wydaniа</p>
-                        <p class="main">2025-03-11</p>
+                        <p class="main">2025-06-16</p>
                     </section>
                     <p class="krecha2"></p>
                     <section class="dana">
                         <p class="info">Imię ojcа</p>
-                        <p class="main">Marek</p>
+                        <p class="main">Adam</p>
                     </section>
                     <p class="krecha2"></p>
                     <section class4="dana">
                         <p class="info">Imię mаtki</p>
-                        <p class="main">Amelia</p>
+                        <p class="main">Nikola</p>
                     </section>
                 </section>
             </section>
